chapter6/06_kubernetes_pod_security_context_with_apparmor_profile.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  annotations:
    container.apparmor.security.beta.kubernetes.io/nginx: runtime/default
