chapter6/08_kubernetes_pod_with_privileged_container.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name: privileged-pod
spec:
  containers:
    - name: privileged-container
      image: busybox
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        privileged: true
