chapter6/11_kubernetes_pod_with_secret_as_environment_variable.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: my-container
    image: my-image
